<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/back"
	>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		>							<!-- 显示联系人姓名线性布局 -->
		<TextView
			android:layout_width="100px"
			android:layout_height="wrap_content"
			android:textSize="18px"
			android:textColor="@color/text"
			android:layout_gravity="left|center_vertical"
			android:text="@string/tvName"
			/>
		<EditText
			android:id="@+id/etName"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			/>
 		</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>							<!-- 显示联系人固定电话的线性布局 -->
		<TextView
			android:layout_width="100px"
			android:layout_height="wrap_content"
			android:textSize="18px"
			android:textColor="@color/text"
			android:layout_gravity="center_vertical|left"
			android:text="@string/tvPhone"
			/>
		<EditText
			android:id="@+id/etPhone"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:phoneNumber="true"
			/>
 		</LinearLayout>
	<LinearLayout
	    android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>										<!-- 显示联系人手机号码的线性布局 -->
		<TextView
			android:layout_width="100px"
			android:layout_height="wrap_content"
			android:textSize="18px"
			android:textColor="@color/text"
			android:layout_gravity="left|center_vertical"
			android:text="@string/tvMobile"
			/>
		<EditText
			android:id="@+id/etMobile"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:phoneNumber="true"
			/>
 		</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>										<!-- 显示联系人电子邮件的线性布局 -->
		<TextView
			android:layout_width="100px"
			android:layout_height="wrap_content"
			android:textSize="18px"
			android:textColor="@color/text"
			android:layout_gravity="left|center_vertical"
			android:text="@string/tvEmail"
			/>
		<EditText
			android:id="@+id/etEmail"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			/>
 		</LinearLayout> 
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>										<!-- 显示联系人邮编的线性布局 -->
		<TextView
			android:layout_width="100px"
			android:layout_height="wrap_content"
			android:textSize="18px"
			android:textColor="@color/text"
			android:layout_gravity="left|center_vertical"
			android:text="@string/tvPost"
			/>
		<EditText
			android:id="@+id/etPost"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			/>
 		</LinearLayout>  
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>										<!-- 显示联系人通信地址的线性布局 -->
		<TextView
			android:layout_width="100px"
			android:layout_height="wrap_content"
			android:textSize="18px"
			android:textColor="@color/text"
			android:layout_gravity="left|center_vertical"
			android:text="@string/tvAddr"
			/>
		<EditText
			android:id="@+id/etAddr"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			/>
 		</LinearLayout>
	<LinearLayout
		android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>										<!-- 显示联系人公司的线性布局 -->
		<TextView
			android:layout_width="100px"
			android:layout_height="wrap_content"
			android:textSize="18px"
			android:textColor="@color/text"
			android:layout_gravity="left|center_vertical"
			android:text="@string/tvComp"
			/>
		<EditText
			android:id="@+id/etComp"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			/>
 		</LinearLayout>
 	<ImageButton
 		android:id="@+id/ibSave"
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content"
 		android:src="@drawable/save"
 		/>
</LinearLayout>
